k8s/toolmonk-code-runner/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: toolmonk-code-runner
  labels:
    name: toolmonk-code-runner
